<resources>
    <string name="app_name">Shopping Project</string>
    <string name="search_edit">원하는 검색어를 입력해 주세요</string>
    <string name="order">주문</string>
    <string name="stock_count">재고 수량 :</string>
    <string name="up_date">등록일자 :</string>
    <string name="detail">상세정보</string>
    <string name="review">리뷰</string>
    <string name="QnA"><![CDATA[Q&A]]></string>
    <string name="bucket">장바구니</string>
    <string name="won">원</string>
    <string name="gae">개</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="mypage">마이페이지</string>
    <string name="sort">Sort by</string>

    <string name="OurProducts">Our Products</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="size">Size: </string>
    <string name="_32">32</string>
    <string name="available_color">Available Color: </string>
    <string name="_120_00">$ 120.00</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="dress">Dress</string>
    <string name="jewellery">Jewellery</string>
    <string name="shoe">Shoe</string>
    <string name="my_cart">My Cart</string>
    <string name="product_name">Product Name</string>
    <string name="_120_00_">120.00 $</string>
</resources>