<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/menu_home_icon"/>

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:enabled="true"
        android:icon="@drawable/menu_search_icon"/>

    <item
        android:id="@+id/menu_store"
        android:title="@string/bucket"
        android:enabled="true"
        android:icon="@drawable/menu_store_icon"/>

    <item
        android:id="@+id/menu_mypage"
        android:title="@string/mypage"
        android:enabled="true"
        android:icon="@drawable/menu_mypage_icon"/>

</menu>