<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/product_frag_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/more_menu_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:scaleY="0.9"
            android:tint="@color/side_color"
            app:srcCompat="@drawable/more" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:searchIcon="@drawable/search"
            android:scaleY="1.2"
            android:scaleX="1.2"/>

        <TextView
            android:id="@+id/ourproduct_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_menu_iv"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/OurProducts"
            android:textAllCaps="false"
            android:textColor="@color/side_color"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sort_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_menu_iv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sort"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/dropdown" />

        <TableRow
            android:id="@+id/category_tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ourproduct_tv"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/category_Dress"
                android:layout_width="110dp"
                android:layout_height="38dp"
                android:background="@drawable/category_outline_box"
                android:text="@string/dress"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/category_Shoe"
                android:layout_width="110dp"
                android:layout_height="38dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/category_outline_box"
                android:text="@string/shoe"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/category_Jewellery"
                android:layout_width="110dp"
                android:layout_height="38dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/category_outline_box"
                android:text="@string/jewellery"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productList_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/category_tr"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/model_product_item" />

    </RelativeLayout>

</layout>