<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:background="@drawable/back1">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/product_cardView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:padding="2dp"
                app:cardCornerRadius="120dp"
                app:cardElevation="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/product_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/item1"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:tint="@color/side_color"
                app:srcCompat="@drawable/back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/likeButton"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/like_back"
                android:shadowColor="?android:attr/shadowColor"
                android:shadowDy="5"
                app:srcCompat="@drawable/like_fill_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/product_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:text="@string/product_name"
            android:textAllCaps="false"
            android:textColor="@color/side_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/product_description"
            android:textAllCaps="false" />

        <TableRow
            android:id="@+id/size_tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/size"
                android:textAllCaps="false"
                android:textColor="@color/side_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_size_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_size_recycler" />

        </TableRow>

        <TableRow
            android:id="@+id/color_tableRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/color_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/available_color"
                android:textAllCaps="false"
                android:textColor="@color/side_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_color_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="6"
                tools:listitem="@layout/item_color_recycler" />

        </TableRow>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/total_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120_00"
                android:textColor="@color/side_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@color/side_color"
                android:drawableStart="@drawable/addtocart_img"
                android:layout_marginStart="100dp"
                android:gravity="center"
                android:paddingStart="7dp"
                android:paddingEnd="0dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </LinearLayout>

    </LinearLayout>

</layout>
